migrate tests to AssertJ